@@ -1,3 +1,4 @@
+* BUG#7239 Ne pas vérifier les mandats amendés lors de la réactivation d'un contrat
 * BUG#6902 Corrige l'avenant de changements de quittancement sur un contrat sans payeur
 * BUG#6862 Corrige la recherche des contrats et des mandats en cas d'amendement de mandat SEPA
 
