@@ -1,3 +1,4 @@
+* BUG#7239 Do not check amended mandates when reactivating a contract
 * BUG#6902 Fix billing information endorsement with no payer
 * BUG#6862 Fix search for contracts and mandates when amending SEPA mandate
 
